# tileblockers

./: .gitignore  CLAUDE.md  pyproject.toml
examples/: .python-version  default.mplstyle  gen_data.py  phase_diagram_data_T_3.00e+01_to_5.45e+01_n50_tile_1.00e-08_to_1.00e-06_n20_bconc_2.50e-06.csv  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-07_bmult_0.00e+00_to_4.90e+01_n50.csv  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-07_bmult_0.00e+00_to_4.90e+01_n50.json  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-08_to_1.00e-06_n50_bconc_0.00e+00_to_5.00e-07_n5.csv  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-08_to_1.00e-06_n50_bconc_0.00e+00_to_5.00e-07_n5.json  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-16_bmult_0.00e+00_to_4.80e+01_n25.csv  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-16_bmult_0.00e+00_to_4.80e+01_n25.json  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-16_bmult_0.00e+00_to_4.90e+01_n50.csv  phase_diagram_data_T_3.00e+01_to_5.48e+01_n125_tile_1.00e-16_bmult_0.00e+00_to_4.90e+01_n50.json  phase_diagram_data_T_4.30e+01_to_5.48e+01_n60_tile_1.00e-08_to_1.00e-06_n50_bconc_2.50e-06_to_5.00e-07_n4.csv  phase_diagram_data_T_4.30e+01_to_5.48e+01_n60_tile_1.00e-08_to_1.00e-06_n50_bconc_2.50e-06_to_5.00e-07_n4.json  phase_diagram_data_T_4.50e+01_to_5.48e+01_n50_tile_1.00e-08_to_1.00e-06_n50_bconc_2.50e-06_to_5.00e-07_n4.csv  phase_diagram_data_T_4.50e+01_to_5.48e+01_n50_tile_1.00e-08_to_1.00e-06_n50_bconc_2.50e-06_to_5.00e-07_n4.json  phase_diagrams.ipynb
(+11 files in other folders)
