[project]
name = "tileblockers"
version = "0.1.0"
description = "Combined support library for tile blockers papers and presentations."
readme = "README.md"
authors = [
    { name = "Constantine Evans", email = "constantine@costi.net" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "scipy>=1.16.1",
    "rgrow>=0.21.1,<0.22.0",
]

# [project.optional-dependencies]
# rgrow = [
#     "rgrow @ git+https://github.com/cgevans/rgrow.git@main",
# ]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
tileblockers-gen-data = "tileblockers.gen_data:main"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "pytest>=8.0.0",
]
